[package]
name = "space_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
rand = "0.8"
bevy_prototype_lyon = "0.12"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
